@@ -109,6 +109,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9069) Use galleries in query pages dedicated to images
 * (bug 9177) Installer now warns of various conditions affecting session.save_path
   which can lead to broken session storage
+* (bug 9046) Special page to list pages without language links
 
 == Bugfixes since 1.9 ==
 * (bug 7292) Fix site statistics when moving pages in/out of content namespaces
